--- a/style/scss/main.scss
+++ b/style/scss/main.scss
@@ -1,5 +1,29 @@
 $main_color: #7835bb;
 
+@mixin post {
+    font: 0.8em/1.5 "Helvetica Neue", Helvetica, arial, sans-serif;
+        color:#555;
+}
+
+
+/* Layout*/
 h1,h2,h3,h4,h5,h6{
     color:$main_color;
 }
+
+/*Modules*/
+.post{
+    padding-left:1em;
+    
+    .post-title{
+        @include post;
+        font-size:1.5em;
+        
+    }
+    .post-body{
+
+    @include post;
+}
+}
+
+
